--- a/results.html
+++ b/results.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <script type="text/javascript" src="results.js"></script>
 
 <title> Results </title>
@@ -108,9 +109,9 @@
       <div class="card" id="TomorrowEventCard">
         <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
         <div class="content-container">
-          <h2>Event Name</h2>
-          <p class="title" id="tag1">Health and Medicine</p>
-          <p>Some Event Description...</p>
+          <h2 class="Event-Title">Event Name</h2>
+          <p class="Event-Category" id="tag1">Health and Medicine</p>
+          <p class="Event-Description">Some Event Description...</p>
           <p class="TomorrowEvent">Date: Tomorrow at 6pm!</p>
           <p><button class="button">Learn More!</button></p>
         </div>
@@ -120,9 +121,9 @@
       <div class="card">
         <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
         <div class="content-container">
-          <h2>Event Name</h2>
-          <p class="title" id="tag2">Children and Youth</p>
-          <p>Some Event Description...</p>
+          <h2 class="Event-Title">Event Name</h2>
+          <p class="Event-Category" id="tag2">Children and Youth</p>
+          <p class="Event-Description">Some Event Description...</p>
           <p class="ThisWeekEvent">Date: This Thursday at 1pm until 3pm</p>
           <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()">Learn More!</button></p>
         </div>
@@ -134,9 +135,9 @@
     <div class="card">
       <img src="images/matt-collamer-555626-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id="tag3">Homeless and Housing</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag3">Homeless and Housing</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -146,9 +147,9 @@
     <div class="card">
       <img src="images/ap-x-90-395258-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id="tag4">Seniors</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag4">Seniors</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -158,9 +159,9 @@
     <div class="card">
       <img src="images/nikhita-s-615116-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id="tag5">Education and Literacy</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag5">Education and Literacy</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -172,9 +173,9 @@
       <div class="card">
         <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
         <div class="content-container">
-          <h2>Event Name</h2>
-          <p class="title" id="tag6">Health and Medicine</p>
-          <p>Some Event Description...</p>
+          <h2 class="Event-Title">Event Name</h2>
+          <p class="Event-Category" id="tag6">Health and Medicine</p>
+          <p class="Event-Description">Some Event Description...</p>
           <p>Date: Some Date</p>
           <p><button class="button">Learn More!</button></p>
         </div>
@@ -184,9 +185,9 @@
       <div class="card">
         <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
         <div class="content-container">
-          <h2>Event Name</h2>
-          <p class="title" id = "tag7">Children and Youth</p>
-          <p>Some Event Description...</p>
+          <h2 class="Event-Title">Event Name</h2>
+          <p class="Event-Category" id = "tag7">Children and Youth</p>
+          <p class="Event-Description">Some Event Description...</p>
           <p>Date: Some Date</p>
           <p><button class="button">Learn More!</button></p>
         </div>
@@ -198,9 +199,9 @@
     <div class="card">
       <img src="images/matt-collamer-555626-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id = "tag8">Homeless and Housing</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id = "tag8">Homeless and Housing</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -210,9 +211,9 @@
     <div class="card">
       <img src="images/ap-x-90-395258-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id = "tag9">Seniors</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id = "tag9">Seniors</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -222,9 +223,9 @@
     <div class="card">
       <img src="images/nikhita-s-615116-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container">
-        <h2>Event Name</h2>
-        <p class="title" id = "tag10">Education and Literacy</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id = "tag10">Education and Literacy</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
