--- a/homeb.html
+++ b/homeb.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <script type="text/javascript" src="results.js"></script>
 
 <title> Home </title>
@@ -87,9 +88,9 @@
     <div class="card">
       <img src="images/matt-collamer-555626-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container homepagecard">
-        <h2>Event Name</h2>
-        <p class="title" id="tag3">Homeless and Housing</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag3">Homeless and Housing</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button" href="results.html">Learn More!</button></p>
       </div>
@@ -99,9 +100,9 @@
     <div class="card">
       <img src="images/ap-x-90-395258-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container homepagecard">
-        <h2>Event Name</h2>
-        <p class="title" id="tag4">Seniors</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag4">Seniors</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
@@ -111,9 +112,9 @@
     <div class="card">
       <img src="images/nikhita-s-615116-unsplash.jpg" alt="Jane" class="images">
       <div class="content-container homepagecard">
-        <h2>Event Name</h2>
-        <p class="title" id="tag5">Education and Literacy</p>
-        <p>Some Event Description...</p>
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag5">Education and Literacy</p>
+        <p class="Event-Description">Some Event Description...</p>
         <p>Date: Some Date</p>
         <p><button class="button">Learn More!</button></p>
       </div>
