--- a/homec.html
+++ b/homec.html
@@ -69,7 +69,7 @@
 
   <div class="spacingnav">
   </div>
-  <div class="featurebar">
+  <!--<div class="featurebar">
   <h3> Popular categories </h3>
   <div class="homebuttonarray">
     <button class="regularbutfirst" onclick="window.location.href='results.html';">
@@ -94,7 +94,7 @@
   <button class="filterbut">When </button>
   <button class="filterbut">When </button>-->
 
-</div>
+<!--</div>-->
 <div id="stick-here"></div>
 <div class="filterbar" id="MainFilter">
   <div class="searchinfilter">
@@ -165,11 +165,38 @@
 </label>
 
 <button id="UpdateButton" type="submit" class="UpdateResultsGrey" onclick="updateResults()">Update Results</button>
+
 </div>
 
 
+
+
+
   <div class="searchresults" id="MainResults">
+    <section id="moremoremore"> </section>
+<div class="moreinfo" id="moremore">
+    <div class = "popupwrapper">
+      <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
+      <div class="content-container">
+        <h2 class="Event-Title">Event Name</h2>
+        <p class="Event-Category" id="tag1">Health and Medicine</p>
+        <p class="Event-Description">Longer Event Description...</p>
+        <p class="Event-Date TomorrowEventbold">Date: </p>
+        <p class="Event-Date TomorrowEvent">Tomorrow at 6pm!</p>
+      </div>
+  </div>
+  <div class="register-info">
+  </div>
+</div>
+
     <div id="loading-blank" class="loading-child"><div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div> </div>
+    <div id="popUpEvent" class="popup">
+      <div class="contentpop">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+        <button> Click me </button>
+      </div>
+    </div>
     <div class="searchresults-top">
       <div class="column-top">
         <div class="card" id="TomorrowEventCard">
@@ -300,15 +327,11 @@
       </div>
     </div>
     </div>
+
+
   </div>
 
-  <div id="popUpEvent" class="popup">
-    <div class="contentpop">
-      <span class="close">&times;</span>
-      <p>Some text in the Modal..</p>
-      <button> Click me </button>
-    </div>
-  </div>
+
 
 
 
