--- a/homec.html
+++ b/homec.html
@@ -51,8 +51,8 @@
 <div class="mainsearch">
   <h1> Your service journey starts here </h1>
 <div class="searchinfilterhome">
-  <input class="searchinfilterhome" id = "search-bar-filter" type="text" placeholder="Enter ZIP Code..." name="search" onchange="#bottomresults">
-  <button type="submit"><i class="fa fa-search" onclick="window.location.href=#bottomresults"></i></button>
+  <input class="searchinfilterhome" id = "search-bar-filter-origin" type="text" placeholder="Enter ZIP Code..." name="search" onchange="moveScreen(this.value)">
+  <button type="submit"><i class="fa fa-search" onclick="moveScreen()"></i></button>
 </div>
 </div>
 
@@ -186,6 +186,7 @@
       </div>
   </div>
   <div class="register-info">
+    <a onclick=disappearEvent() class="close-button"></a>
   </div>
 </div>
 
@@ -220,7 +221,7 @@
             <p class="Event-Description">Some Event Description...</p>
             <p class="Event-Date ThisWeekEventbold">Date: <p>
             <p class="Event-Date ThisWeekEvent">This Thursday from 1pm - 3pm</p>
-            <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()">Learn More!</button></p>
+            <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()" onclick="revealEvent()">Learn More!</button></p>
           </div>
         </div>
       </div>
@@ -234,7 +235,7 @@
           <p class="Event-Category" id="tag3">Homeless and Housing</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
@@ -246,7 +247,7 @@
           <p class="Event-Category" id="tag4">Seniors</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
@@ -258,7 +259,7 @@
           <p class="Event-Category" id="tag5">Education and Literacy</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
@@ -272,7 +273,7 @@
             <p class="Event-Category" id="tag6">Health and Medicine</p>
             <p class="Event-Description">Some Event Description...</p>
             <p class="Event-Date">Date: Some Date</p>
-            <p><button class="button">Learn More!</button></p>
+            <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
           </div>
         </div>
       </div>
@@ -284,7 +285,7 @@
             <p class="Event-Category" id = "tag7">Children and Youth</p>
             <p class="Event-Description">Some Event Description...</p>
             <p class="Event-Date">Date: Some Date</p>
-            <p><button class="button">Learn More!</button></p>
+            <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
           </div>
         </div>
       </div>
@@ -298,7 +299,7 @@
           <p class="Event-Category" id = "tag8">Homeless and Housing</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
@@ -310,7 +311,7 @@
           <p class="Event-Category" id = "tag9">Seniors</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
@@ -322,7 +323,7 @@
           <p class="Event-Category" id = "tag10">Education and Literacy</p>
           <p class="Event-Description">Some Event Description...</p>
           <p class="Event-Date">Date: Some Date</p>
-          <p><button class="button">Learn More!</button></p>
+          <p><button class="button" onclick="revealEvent()">Learn More!</button></p>
         </div>
       </div>
     </div>
