Changed sign-up event pop up

--- a/homec.html
+++ b/homec.html
@@ -186,6 +186,11 @@
       </div>
   </div>
   <div class="register-info">
+      <h2 class="text-entry-title"> Register </h2>
+      <input class="text-entry" type="text" placeholder="Name..." name="name-entry">
+      <input class="text-entry" type="text" placeholder="Email..." name="email-entry">
+      <input class="text-entry" type="text" placeholder="Phone-Number..." name="phone-number">
+      <button class="sign-up-button" type="submit"> Sign Up! </button>
   </div>
 </div>
 
