--- a/homec.html
+++ b/homec.html
@@ -98,7 +98,7 @@
 <div id="stick-here"></div>
 <div class="filterbar" id="MainFilter">
   <div class="searchinfilter">
-    <input class="searchinfilter" id = "search-bar-filter" type="text" placeholder="Search.." name="search" onchange="searchUpdateTags()">
+    <input class="searchinfilter" id = "search-bar-filter" type="text" placeholder="Search..." name="search" onchange="searchUpdateTags()">
     <button type="submit"><i class="fa fa-search"></i></button>
   </div>
 <div class="bar-wrapper">
