--- a/homec.html
+++ b/homec.html
@@ -32,19 +32,7 @@
 
   </div>
 
-<!--<div class="navbar" id="TopNav">
-    <c><img class="logoimage" src="images/AAAnewlogo.png" alt="Italian Trulli" onclick="updateHomeNav()"></c>
 
-
-    <!-- <a href="#home" class="notactive">LOGO</a>-->
-    <!--<a id="SignIn" href="#signin" class="notactive" onclick="updateSignInNav();" >Sign In</a>
-    <!-- <a id="SignIn" href="#signin" class="material-icons">account_circle</a> -->
-    <!--<a id="About" href="#about" class="notactive" onclick="updateAboutNav()">About</a>
-    <a id="Home" href="home.html" class="active" onclick="updateHomeNav();" >Home</a>
-    <a href="javascript:void(0);" class="icon" onclick="openBurgerMenu()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>-->
 
 <div class="spacingnav"></div>
 <div class="feature">
@@ -69,32 +57,7 @@
 
   <div class="spacingnav">
   </div>
-  <!--<div class="featurebar">
-  <h3> Popular categories </h3>
-  <div class="homebuttonarray">
-    <button class="regularbutfirst" onclick="window.location.href='results.html';">
-      <img src="servicedog.jpeg" class="smallbuttonimage">Animals</button>
 
-    <button class="regularbut" onclick="window.location.href='results.html';">
-      <img src="medicine.png" class="smallbuttonimage">
-      Health</button>
-
-          <button class="regularbut" onclick="window.location.href='results.html';">
-      <img src="tent.png" class="smallbuttonimage">
-      Homeless</button>
-    <button class="regularbutend" onclick="window.location.href='results.html';">
-      <img src="people.png" class="smallbuttonimage">
-      Seniors</button>
-  </div>
-  <h3> Explore opportunities in Evanston </h3>
-  <!--<button class="filterbut">When </button>
-  <button class="filterbut">When </button>
-  <button class="filterbut">When </button>
-  <button class="filterbut">When </button>
-  <button class="filterbut">When </button>
-  <button class="filterbut">When </button>-->
-
-<!--</div>-->
 <div id="stick-here"></div>
 <div class="filterbar" id="MainFilter">
   <div class="searchinfilter">
@@ -200,24 +163,18 @@
 </div>
 
     <div id="loading-blank" class="loading-child"><div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div> </div>
-    <div id="popUpEvent" class="popup">
-      <div class="contentpop">
-        <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
-        <button> Click me </button>
-      </div>
-    </div>
+
     <div class="searchresults-top">
       <div class="column-top">
         <div class="card" id="TomorrowEventCard">
           <img src="images/rawpixel-760103-unsplash.jpg" alt="Jane" class="images">
           <div class="content-container">
-            <h2 class="Event-Title">Event Name</h2>
+            <h2 class="Event-Title">Volunteer at Evanston Hospital</h2>
             <p class="Event-Category" id="tag1">Health and Medicine</p>
-            <p class="Event-Description">Some Event Description...</p>
+            <p class="Event-Description">We are looking for five passionate and hardworking individuals to assist our doctors twice a week with various medical tasks.</p>
             <p class="Event-Date TomorrowEventbold">Date: </p>
-            <p class="Event-Date TomorrowEvent">Tomorrow at 6pm!</p>
-            <p><button class="button" id="firstbutton" onclick="revealEvent()">Learn More!</button></p>
+            <p class="Event-Date TomorrowEvent">Starting tomorrow!!</p>
+            <p><button class="button" id="firstbutton" onclick="revealEvent()">Find out more...</button></p>
           </div>
         </div>
       </div>
@@ -225,12 +182,12 @@
         <div class="card" id="ThisWeekEventCard">
           <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
           <div class="content-container">
-            <h2 class="Event-Title">Event Name</h2>
+            <h2 class="Event-Title">Primary school homework club </h2>
             <p class="Event-Category" id="tag2">Children and Youth</p>
-            <p class="Event-Description">Some Event Description...</p>
+            <p class="Event-Description">Evanston Primary School is looking for volunteers to lead a homework club once a week from 3 until 5pm after school.</p>
             <p class="Event-Date ThisWeekEventbold">Date: <p>
-            <p class="Event-Date ThisWeekEvent">This Thursday from 1pm - 3pm</p>
-            <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()" onclick="revealEvent()">Learn More!</button></p>
+            <p class="Event-Date ThisWeekEvent">This Thursday from 3pm - 5pm</p>
+            <p><button id="button1" class="button" onmouseover="updateButton1Text()" onmouseout="returnButton1Text()" onclick="revealEvent()">Find out more...</button></p>
           </div>
         </div>
       </div>
