--- a/homec.html
+++ b/homec.html
@@ -149,13 +149,15 @@
       </div>
   </div>
   <div class="register-info">
+    <form action="">
 
       <h2 class="text-entry-title"> Register </h2>
-     <a onclick=disappearEvent() class="close-button"></a>
-      <input class="text-entry" type="text" onchange = incrementCount() placeholder="Name..." name="name-entry">
-      <input class="text-entry" type="text" onchange = incrementCount() placeholder="Email..." name="email-entry">
-      <input class="text-entry" type="text" onchange = incrementCount() placeholder="Phone-Number..." name="phone-number">
-      <button class="sign-up-button" id = "sign-up" type="submit" onclick=success()> Sign Up! </button>
+      <a onclick="disappearEvent()" class="close-button"></a>
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Name..." name="name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Email..." name="email-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Phone-Number..." name="phone-number">
+      <button class="sign-up-button" id = "sign-up" type="submit" onclick="success()"> Sign Up! </button> 
+    </form>
 
 
 
