--- a/homec.html
+++ b/homec.html
@@ -34,6 +34,7 @@
 
 
 
+
 <div class="spacingnav"></div>
 <div class="feature">
 <div class="mainsearch">
@@ -139,13 +140,13 @@
     <section id="moremoremore"> </section>
 <div class="moreinfo" id="anything">
     <div class = "anything-wrapper">
-      <a style="background-color: red; margin-left: 700px; margin-top: 0px;" onclick="disappearAnything()" class="close-button"></a>
-        <p style="margin-top: -20px;" class="new-content"> You're Signed Up!!! </p>
+      <a style="background-color: red; margin-left: 700px; margin-top: 0px; padding-left: 5px;" onclick="disappearAnything()" class="close-button"></a>
+        <p id ="personalized" style="margin-top: -20px;" class="new-content"> You're Signed Up!!! </p>
         <img class="animationin" id="check" src="check.gif" alt="yay!" style="width:500px; margin-top:-50px">
         <img class="animationin" id="holdcheck" src="holdcheck.jpeg" alt="yay!" style="display: none; width:500px; margin-top:-50px">
-        <p style="margin-top:-30px"> Thank you, XXX, for signing up </p>
+        <p style="margin-top:-30px"> Thank you very much for signing up! </p>
         <p style="margin-top:-10px"> You will receive an email confirmation shortly... </p>
-      
+
     </div>
 </div>
 <div class="moreinfo" id="moremore">
@@ -162,12 +163,13 @@
   <div class="register-info">
 
 
-      <h2 class="text-entry-title"> Register </h2>
-      <a onclick="disappearEvent()" class="close-button"></a>
-      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Name..." name="name-entry">
-      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Email..." name="email-entry">
+      <h2 style="padding-top: 20px;" class="text-entry-title"> Register for this opportunity</h2>
+      <a style="margin-top: -95px;" onclick="disappearEvent()" class="close-button"></a>
+      <input id="name-entry" class="text-entry" type="text" onchange="incrementCount()" placeholder="Your first name..." name="name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your last name..." name="name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your email..." name="email-entry">
 
-      <input class="text-entry" type="text" oninput="incrementCount()" placeholder="Phone-Number..." name="phone-number">
+      <input class="text-entry" type="text" oninput="incrementCount()" placeholder="Your phone number..." name="phone-number">
       <button class="sign-up-button" id = "sign-up" type="submit" onclick="success()"> Sign Up! </button>
 
 
@@ -175,6 +177,35 @@
 
   </div>
 </div>
+
+<!--<div class="moreinfo" id="moremore2">
+    <div class = "popupwrapper">
+      <img src="images/thomas-young-634092-unsplash.jpg" alt="Jane" class="images">
+      <div class="content-container">
+        <h2 class="Event-Title">Primary School Homework Club</h2>
+        <!--<p class="Event-Category" id="tag1">Health and Medicine</p>
+        <p class="Event-Description">Evanston Primary School is looking for volunteers to lead a homework club once a week from 3 until 5pm after school.</p>
+        <p class="Event-Date ThisWeekEventbold">Date: </p>
+        <p class="Event-Date ThisWeekEvent">This Thursday from 3pm - 5pm</p>
+      </div>
+  </div>
+  <div class="register-info">
+
+
+      <h2 style="padding-top: 20px;" class="text-entry-title"> Register for this opportunity</h2>
+      <a style="margin-top: -95px;" onclick="disappearEvent()" class="close-button"></a>
+      <input id="name-entry" class="text-entry" type="text" onchange="incrementCount()" placeholder="Your first name..." name="name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your last name..." name="name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your email..." name="email-entry">
+
+      <input class="text-entry" type="text" oninput="incrementCount()" placeholder="Your phone number..." name="phone-number">
+      <button class="sign-up-button" id = "sign-up" type="submit" onclick="success()"> Sign Up! </button>
+
+
+
+
+  </div>
+</div>-->
 
     <div id="loading-blank" class="loading-child"><div id="loading-bar" class="lds-facebook"><div></div><div></div><div></div></div> </div>
 
