--- a/homec.html
+++ b/homec.html
@@ -162,16 +162,23 @@
   </div>
   <div class="register-info">
 
+    <form name="myForm" onsubmit="return validateForm()" method="post">
 
       <h2 style="padding-top: 20px;" class="text-entry-title"> Register for this opportunity</h2>
       <a style="margin-top: -95px;" onclick="disappearEvent()" class="close-button"></a>
-      <input id="name-entry" class="text-entry" type="text" onchange="incrementCount()" placeholder="Your first name..." name="name-entry">
-      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your last name..." name="name-entry">
+      <input id="name-entry" class="text-entry" type="text" onchange="incrementCount()" placeholder="Your first name..." name="first-name-entry">
+      <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your last name..." name="last-name-entry">
       <input class="text-entry" type="text" onchange="incrementCount()" placeholder="Your email..." name="email-entry">
 
       <input class="text-entry" type="text" oninput="incrementCount()" placeholder="Your phone number..." name="phone-number">
-      <button class="sign-up-button" id = "sign-up" type="submit" onclick="success()"> Sign Up! </button>
 
+    <label class="container" id="email-notification"> I want a confirmation email...
+      <input type="checkbox">
+      <span class="checkmark"></span>
+    </label>
+
+      <button class="sign-up-button" id = "sign-up" type="submit" value="Submit"> Sign Up! </button>
+    </form>
 
 
 
